@@ -1,7 +1,15 @@
 /***********************************************************************
 X3 ChangeLog
 
-2009-10-27	Henrik Stuart	<evilnet@hstuart.dk>
+2009-10-27  Henrik Stuart  <evilnet@hstuart.dk>
+
+	* src/nickserv.h: make auto_oper_privs and auto_admin_privs const.
+
+	* src/proto.h: make privs const in irc_raw_privs.
+
+	* src/proto-p10.c: make privs const in irc_raw_privs.
+
+2009-10-27  Henrik Stuart  <evilnet@hstuart.dk>
 
 	* src/global.c: remove unused code.
 
